# OceanSim1D

./: README.md  main.py  oceanwaves.py  pyproject.toml
ocean/: cascade.py  drawer.py  init_helper.py  ocean_waves.py  oceanwaves.py
