[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocean-sim"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE" }
authors = [
    { name = "David Algis", email = "david.algis@tutamail.com" }
]
dependencies = [
    "numpy",
    "pygame",
    "numba"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "flake8"
]

[project.urls]
"Homepage" = "https://github.com/davidAlgis/OceanSim1D"
"Bug Tracker" = "https://github.com/davidAlgis/OceanSim1D/issues"

[tool.setuptools]
py-modules = [
    "ocean", 
    "tests"
]